--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,9 @@ h2 {
 }
 img {
     position: absolute;
-    top: 20px;
-    left: 12px;
+    top: 0px;
+    left: 0px;
 }
 body {
-    background: #1215ff;
+    background: #020201;
 }
