--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Lobster);
 
 section {
-    background-image: url('../img/happy_holiday.jpg');
+    /*background-image: url('../img/happy_holiday.jpg');*/
     width: 1920px;
     height: 1200px;
     color:white;
